Bug 1276530 - part2: The id of cue might be empty, so don't use it for checking. r=rillian

MozReview-Commit-ID: CyjEkOmDNG0